--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<h1>本站网址</h2>
 				<ul class="bt-list">
 					<li>
-						<a href="#" class="hvr-fade button">Fade</a>
-						<a href="#" class="hvr-back-pulse button">Back Pulse</a>
+						<a href="https://bbs.csoci.com:442/" class="hvr-fade button">NodeBB论坛</a>
+						<a href="https://odc.csoci.com:442/" class="hvr-back-pulse button">白嫖跑路盘</a>
 						<a href="#" class="hvr-sweep-to-right button">Sweep To Right</a>
 						<a href="#" class="hvr-sweep-to-left button">Sweep To Left</a>
 					</li>
