--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 </script>
 <!-- webfonts -->
-	<link href='http://fonts.googleapis.com/css?family=Lora|Cinzel+Decorative:400,700,900' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:600italic,400,300,600' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.loli.net/css?family=Lora|Cinzel+Decorative:400,700,900' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.loli.net/css?family=Open+Sans:600italic,400,300,600' rel='stylesheet' type='text/css'>
 <!-- webfonts-->
 </head>
 <body>
